# apps/server/src/routes/api/server.rs
@@ -7,9 +7,9 @@ use uuid::Uuid;
 use validator::Validate;
 
 use crate::{
-    models::server::Server,
+    models::server::{Server, ServerMember},
     state::{
-        api_errors::{ApplicationError, ErrorDetail, from_sqlx_error},
+        api_errors::{ApplicationError, ErrorDetail},
         oauth::jwt::Claims,
     },
 };
@@ -18,7 +18,8 @@ use crate::{
     tag = "server", 
     description = "fetch a server",
     responses(
-        (status = 200, description = "single server info", body = Server)
+        (status = 200, description = "single server info", body = Server),
+        (status = 500, description = "internal server error", body = ApplicationError)
     )
 )]
 #[get("/server/{server}")]
@@ -26,29 +27,85 @@ pub async fn get_server(
     db: web::Data<SqlitePool>,
     server: web::Path<uuid::Uuid>,
     user: web::ReqData<Claims>,
-) -> actix_web::Result<web::Json<Server>> {
+) -> Result<web::Json<Server>, ApplicationError> {
     let server_id = server.into_inner();
-
-    let server = Server::get(&db, server_id).await.map_err(from_sqlx_error)?;
+    let server = query_as!(Server, "SELECT * FROM servers WHERE id = ?", server_id)
+        .fetch_one(db.get_ref())
+        .await?;
 
     Ok(web::Json(server))
 }
 
-#[utoipa::path(tag = "server", description = "delete a server")]
+#[utoipa::path(
+    tag = "server",
+    description = "delete a server",
+    responses(
+        (status = 201, description = "server deleted"),
+        (status = 500, description = "internal server error", body = ApplicationError)
+    )
+)]
 #[delete("/server/{server}")]
-pub async fn delete_server(db: web::Data<SqlitePool>, server: String) -> impl Responder {
-    HttpResponse::NotImplemented()
+pub async fn delete_server(
+    db: web::Data<SqlitePool>,
+    params: web::Path<uuid::Uuid>,
+    user: web::ReqData<Claims>,
+) -> Result<impl Responder, ApplicationError> {
+    let server_id = params.into_inner();
+
+    query!(
+        "DELETE FROM servers WHERE id = ? AND owner_id = ?",
+        server_id,
+        user.sub
+    )
+    .execute(db.get_ref())
+    .await?;
+
+    Ok(HttpResponse::Accepted())
 }
 
-#[utoipa::path(tag = "server", description = "create a server")]
-#[post("/server/{server}")]
-pub async fn post_server(db: web::Data<SqlitePool>, server: String) -> impl Responder {
-    HttpResponse::NotImplemented()
+#[derive(Debug, Deserialize, Validate, ToSchema)]
+struct ServerPost {
+    #[validate(length(min = 3, max = 255))]
+    name: String,
+    #[validate(url)]
+    icon: Option<String>,
+}
+
+#[utoipa::path(
+    tag = "server", 
+    description = "create a server",
+    responses(
+        (status = 200, description = "created server", body = Server),
+        (status = 500, description = "internal server error", body = ApplicationError)
+    )
+)]
+#[post("/server")]
+pub async fn post_server(
+    db: web::Data<SqlitePool>,
+    user: web::ReqData<Claims>,
+    body: web::Json<ServerPost>,
+) -> Result<impl Responder, ApplicationError> {
+    let server_id = uuid::Uuid::now_v7();
+    let now = time::OffsetDateTime::now_utc();
+
+    let server = query_as!(
+        Server,
+        "INSERT INTO servers VALUES (?,?,?,?,?) RETURNING *",
+        server_id,
+        body.name,
+        user.sub,
+        now,
+        body.icon
+    )
+    .fetch_one(db.get_ref())
+    .await?;
+
+    Ok(web::Json(server))
 }
 
 #[derive(Debug, Deserialize, Validate, ToSchema)]
 struct ServerPatch {
-    #[validate(length(min = 3))]
+    #[validate(length(min = 3, max = 255))]
     name: Option<String>,
     #[validate(url)]
     icon: Option<String>,
@@ -58,7 +115,8 @@ struct ServerPatch {
     tag = "server", 
     description = "update a server",
     responses(
-        (status = 201, description = "updated server properties")
+        (status = 201, description = "updated server properties"),
+        (status = 500, description = "internal server error", body = ApplicationError)
     )
 )]
 #[patch("/server/{server}")]
@@ -67,7 +125,7 @@ pub async fn patch_server(
     body: Validated<web::Json<ServerPatch>>,
     server: web::Path<Uuid>,
     user: web::ReqData<Claims>,
-) -> actix_web::Result<impl Responder> {
+) -> Result<impl Responder, ApplicationError> {
     let server_id = server.into_inner();
 
     // allow non owner to update server?
@@ -90,8 +148,7 @@ pub async fn patch_server(
                 user.sub
             )
             .execute(db.get_ref())
-            .await
-            .map_err(from_sqlx_error)?;
+            .await?;
         }
         (None, Some(name)) => {
             query!(
@@ -101,8 +158,7 @@ pub async fn patch_server(
                 user.sub
             )
             .execute(db.get_ref())
-            .await
-            .map_err(from_sqlx_error)?;
+            .await?;
         }
         (Some(icon), Some(name)) => {
             query!(
@@ -113,23 +169,69 @@ pub async fn patch_server(
                 user.sub
             )
             .execute(db.get_ref())
-            .await
-            .map_err(from_sqlx_error)?;
+            .await?;
         }
     }
+
+    // TODO: notify connected clients of changes?
 
     Ok(HttpResponse::Accepted())
 }
 
-#[utoipa::path(tags = ["server","user"], description="list servers that the current user is on")]
+#[utoipa::path(
+    tags = ["server","user"], 
+    description="list servers that the current user is in",
+    responses(
+        (status = 200, description = "created server", body = Vec<Server>),
+        (status = 500, description = "internal server error", body = ApplicationError)
+    )
+)]
 #[get("/servers")]
 pub async fn list_servers(
     db: web::Data<SqlitePool>,
     user: web::ReqData<Claims>,
-) -> actix_web::Result<web::Json<Vec<Server>>> {
-    let servers = query_as!(Server,r#"SELECT servers.* FROM servers JOIN server_members ON server_members.server_id = servers.id WHERE server_members.user_id = ? LIMIT 30"#,  user.sub).fetch_all(db.get_ref()).await.map_err(from_sqlx_error)?;
+) -> Result<web::Json<Vec<Server>>, ApplicationError> {
+    let servers = query_as!(Server,r#"SELECT servers.* FROM servers JOIN server_members ON server_members.server_id = servers.id WHERE server_members.user_id = ? LIMIT 30"#,  user.sub).fetch_all(db.get_ref()).await?;
 
     Ok(web::Json(servers))
 }
 
-// ->
+#[utoipa::path(
+    tags = ["server","members"], 
+    description= "server members list",
+    responses(
+        (status = 200, description = "list of members", body = Vec<ServerMember>),
+        (status = 500, description = "internal server error", body = ApplicationError)
+    )
+)]
+#[get("/server/{server}/members")]
+pub async fn list_members(
+    db: web::Data<SqlitePool>,
+    params: web::Path<uuid::Uuid>,
+    user: web::ReqData<Claims>,
+) -> Result<web::Json<Vec<ServerMember>>, ApplicationError> {
+    let server_id = params.into_inner();
+
+    let members = query_as!(
+        ServerMember,
+        "SELECT * FROM server_members WHERE server_id = ?",
+        server_id
+    )
+    .fetch_all(db.get_ref())
+    .await?;
+
+    Ok(web::Json(members))
+}
+
+/*
+ * create server
+ * delete server
+ * update server
+ * get server
+ *
+ * list servers by user
+ * list server members
+ *
+ *
+ *
+ */
